views/css/index.css
/* -------- Reset básico mejorado -------- */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  font-family: "Segoe UI", Roboto, system-ui, sans-serif;
  background: #f3f4f6;
  color: #1f2937;
  line-height: 1.5;
}

ol li,
ul li {
  list-style-type: none;
}

.menu-li {
  list-style-type: none;
}

details summary {
  list-style: none;
  /* quita el marcador en Firefox */
}

details summary::-webkit-details-marker {
  display: none;
  /* quita el triangulito en Chrome/Safari */
}

/* -------- Layout -------- */
header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 20px;
  height: 100px;
  /* text-align: center; */
  /* padding: 20px; */
  background: linear-gradient(90deg, #0ea5e9, #2563eb);
  color: white;
  box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.15);
}

header img {
  max-height: 100px;
}

main {
  display: flex;
  flex-direction: column;
  margin: 30px auto;
  padding: 0 15px;
}

.message-warn {
  margin-bottom: 20px;
  font-size: 20px;
  background-color: #802b06;
  width: 100%;
  text-align: center;
  padding: 10px;
  border-radius: 10px;
  color: white;
  letter-spacing: 2px;
  text-wrap-style: balance;
}

/* -------- Día -------- */
.content-item {
  margin-bottom: 40px;
  padding: 20px;
  background: white;
  border-radius: 12px;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
}

.title-section-widget {
  display: flex;
  position: sticky;
  top: 0;
  font-size: 22px;
  font-weight: bold;
  color: #2563eb;
  border-bottom: 3px solid #0ea5e9;
  padding-bottom: 10px;
  width: 100%;
  z-index: 10;
  background-color: #fff;
  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
  white-space: nowrap;
}

.table-content {
  /* margin-top: 30px; */
  display: flex;
  flex-direction: column;
  gap: 20px;
}

/* -------- Evento -------- */
.dailyevent {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  padding: 15px 10px 15px 10px;
  margin-bottom: 12px;
  border-radius: 10px;
  background: #f9fafb;
  transition: transform 0.2s, background 0.2s;
  border: 1px solid #0069e9;
}

.dailyevent:hover {
  background: #eff6ff;
  transform: translateY(-2px);
}

/* -------- Hora y deporte -------- */
.dailytime {
  width: 100px;
  text-align: center;
  margin-right: 5px;
  display: flex;
  flex-direction: column;
}

.dailyhour {
  font-size: 18px;
  font-weight: bold;
  color: #dc2626;
}

.dailyday {
  font-size: 13px;
  font-weight: 500;
  color: #6b7280;
}

.dailycompetition {
  font-weight: 600;
  font-size: 15px;
  color: #2563eb;
  min-width: 179px;
  white-space: break-spaces;
  max-width: 179px;
}

.dailyteams {
  flex: 1;
  font-size: 17px;
  font-weight: 600;
  color: #111827;
}

/* -------- Broadcasters -------- */
.dailychannel {
  display: flex;
  flex-direction: column;
  gap: 30px;
  align-items: flex-end;
}

.broadcaster-links {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 10px;
}

.broadcaster-name {
  font-weight: 600;
  color: #374151;
}

/* .broadcaster-link {
  padding: 4px 8px;
  background: #e0f2fe;
  color: #0369a1;
  text-decoration: none;
  border-radius: 6px;
  font-size: 13px;
  transition: background 0.2s;
}
   */
.broadcaster-link {
  padding: 4px 8px;
  background: #0071ea;
  color: #ffffff;
  text-decoration: none;
  border-radius: 6px;
  font-size: 15px;
  transition: background 0.2s;
  font-weight: bold;
}

.broadcaster-link:hover {
  background: #000000;
}

/* -------- Iconos -------- */
[class*="icon-"] {
  font-style: normal;
  font-size: 20px;
}

.icon-futbol:before {
  content: "⚽";
}

.icon-motociclismo:before {
  content: "🏍️";
}

.icon-automovilismo:before {
  content: "🏎️";
}

.icon-rugby:before {
  content: "🏉";
}

.icon-ciclismo:before {
  content: "🚴";
}

.icon-baloncesto:before {
  content: "🏀";
}

.icon-gimnasia:before {
  content: "🤸";
}

.icon-golf:before {
  content: "⛳";
}

.icon-boxeo:before {
  content: "🥊";
}

.icon-motociclismo:before {
  content: "🏎️";
}

.icon-deporte:before {
  content: "🏅";
}

.icon-atletismo:before {
  content: "🏃";
}

.icon-balonmano:before {
  content: "🤾";
}

.icon-tenis:before {
  content: "🥎";
}

.icon-voleibol:before {
  content: "🏐";
}

.icon-mma:before {
  content: "🥋";
}

.icon-padel:before {
  content: "🎾";
}

.main-menu {
  width: 100%;
}

.menu-ul {
  width: 100%;

  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  gap: 40px;
}

.menu-ul li a {
  -webkit-transition: 0.3s;
  transition: 0.3s;

  text-align: center;
}

.block {
  display: block;
}

.logo {
  flex: 0 0 auto;
}

.header-menu {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #ffff;
  margin: 0px 3px;
}

.imglang {
  width: 25px;
  height: 25px;
  border-radius: 50%;
  border: 2px solid #d5dceb;
}

.img-header {
  margin: auto auto 5px;
  width: 25px;
  height: 25px;
}

.whitespace-nowrap {
  white-space: nowrap;
}

.display-none {
  display: none;
}

.display-block {
  display: block;
}

@media screen and (max-width: 768px) {
  main {
    display: flex;
    flex-direction: column;
    margin: 30px auto;
    padding: 0 5px;
    width: auto;
  }

  header {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 20px;
    /* height: 100px; */
    /* text-align: center; */
    /* padding: 20px; */
    background: linear-gradient(90deg, #0ea5e9, #2563eb);
    color: white;
    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.15);
    flex-direction: column;
    height: 100%;
  }

  .main-menu {
    width: 100%;
    height: 250px;
  }

  .menu-ul {
    display: grid;
    grid-template-columns: auto auto;
    width: 100%;
    justify-content: space-around;
    align-items: flex-start;
  }

  .header-menu {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    color: #ffff;
    margin: 0px 3px;
    gap: 10px;
  }

  .header-menu-rev {
    flex-direction: row-reverse;
  }

  .img-header {
    width: 25px;
    height: 25px;
  }

  .menu-li {
    list-style-type: none;
    height: 50px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    width: 100%;
  }

  .menu-li-rev {
    justify-content: flex-end;
  }

  .dailyevent {
    display: grid;
    grid-template-areas:
      "a b"
      "c c"
      "d d";
  }
  .dailycompetition {
    grid-area: b;
  }

  .dailyteams {
    grid-area: c;
    justify-self: flex-start;
    height: 38px;
    align-content: flex-start;
  }
  .dailychannel {
    grid-area: d;
    justify-self: flex-end;
    width: 100%;
  }

  .broadcaster-links {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    flex-direction: column;
    gap: 10px;
    width: 100%;
    place-items: normal;
  }
  .broadcaster-link {
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

